trunk/tests/jastadd/negative/type_errors/L3/4_PredefinedProcPars.ob
MODULE TestModule;
BEGIN
	Write(1);     (* OK *)
	Write         (* NOT OK *)
END TestModule.
